--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 portfolio-item second">
+<!--                 <div class="col-lg-4 col-md-6 portfolio-item second">
                     <div class="portfolio-img rounded overflow-hidden">
                         <img class="img-fluid" src="img/emobilis.jpg" alt="">
                         <div class="portfolio-btn">
@@ -457,7 +457,7 @@
                             <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="https://www.emobilis.ac.ke/"><i class="fa fa-link"></i></a>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
