--- a/index.html
+++ b/index.html
@@ -449,15 +449,7 @@
                         </div>
                     </div>
                 </div>
-<!--                 <div class="col-lg-4 col-md-6 portfolio-item second">
-                    <div class="portfolio-img rounded overflow-hidden">
-                        <img class="img-fluid" src="img/emobilis.jpg" alt="">
-                        <div class="portfolio-btn">
-                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="img/emobilis.jpg" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
-                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="https://www.emobilis.ac.ke/"><i class="fa fa-link"></i></a>
-                        </div>
-                    </div>
-                </div> -->
+
             </div>
         </div>
     </div>
@@ -481,18 +473,7 @@
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="owl-carousel testimonial-carousel">
-                        <div class="testimonial-item text-center">
-                            <div class="position-relative mb-5">
-                                <img class="img-fluid rounded-circle border border-secondary p-2 mx-auto" src="img/lucy.jpeg" alt="">
-                                <div class="testimonial-icon">
-                                    <i class="fa fa-quote-left text-primary"></i>
-                                </div>
-                            </div>
-                            <p class="fs-5 fst-italic">"We've had the pleasure of collaborating with Felix on several client projects, and his contributions has always been outstanding. His ability to grasp complex requirements and deliver elegant solutions is remarkable. Felix is a trusted partner we can always count on."</p>
-                            <hr class="w-25 mx-auto">
-                            <h5>Lucy Karanja</h5>
-                            <span>EMobilis</span>
-                        </div>
+                        
                         <div class="testimonial-item text-center">
                             <div class="position-relative mb-5">
                                 <img class="img-fluid rounded-circle border border-secondary p-2 mx-auto" src="img/wanyama.jpeg" alt="">
@@ -502,7 +483,7 @@
                             </div>
                             <p class="fs-5 fst-italic">"We engaged Felix to revamp our internal software systems, and the results were outstanding. His ability to understand our complex financial requirements and deliver a secure and efficient solution was impressive. Felix is a reliable partner who consistently exceeds expectations."</p>
                             <hr class="w-25 mx-auto">
-                            <h5>Benjamin Sakari</h5>
+                            <h5>Dennis Savai</h5>
                             <span>Soluspace</span>
                         </div>
                         <div class="testimonial-item text-center">
