--- a/index.html
+++ b/index.html
@@ -476,14 +476,14 @@
                         
                         <div class="testimonial-item text-center">
                             <div class="position-relative mb-5">
-                                <img class="img-fluid rounded-circle border border-secondary p-2 mx-auto" src="img/wanyama.jpeg" alt="">
+                                <img class="img-fluid rounded-circle border border-secondary p-2 mx-auto" src="" alt="">
                                 <div class="testimonial-icon">
                                     <i class="fa fa-quote-left text-primary"></i>
                                 </div>
                             </div>
                             <p class="fs-5 fst-italic">"We engaged Felix to revamp our internal software systems, and the results were outstanding. His ability to understand our complex financial requirements and deliver a secure and efficient solution was impressive. Felix is a reliable partner who consistently exceeds expectations."</p>
                             <hr class="w-25 mx-auto">
-                            <h5>Dennis Savai</h5>
+                            <h5>George Mbugua</h5>
                             <span>Soluspace</span>
                         </div>
                         <div class="testimonial-item text-center">
