--- a/index.html
+++ b/index.html
@@ -219,6 +219,15 @@
                         <div class="col-md-6">
                             <div class="skill mb-4">
                                 <div class="d-flex justify-content-between">
+                                    <h6 class="font-weight-bold">Kotlin</h6>
+                                    <h6 class="font-weight-bold">90%</h6>
+                                </div>
+                                <div class="progress">
+                                    <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                            </div>
+                            <div class="skill mb-4">
+                                <div class="d-flex justify-content-between">
                                     <h6 class="font-weight-bold">Javascript</h6>
                                     <h6 class="font-weight-bold">90%</h6>
                                 </div>
