--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
                             <p class="fs-5 fst-italic">"We engaged Felix to revamp our internal software systems, and the results were outstanding. His ability to understand our complex financial requirements and deliver a secure and efficient solution was impressive. Felix is a reliable partner who consistently exceeds expectations."</p>
                             <hr class="w-25 mx-auto">
                             <h5>George Mbugua</h5>
-                            <span>Soluspace</span>
+                            <span>Kenya Airports Authority</span>
                         </div>
                         <div class="testimonial-item text-center">
                             <div class="position-relative mb-5">
@@ -505,7 +505,7 @@
                             <p class="fs-5 fst-italic">"Working with Felix has been a game-changer for our startup. His expertise in software development and the ability to turn our ideas into reality has been instrumental in our success. We couldn't have asked for a more reliable and innovative partner."</p>
                             <hr class="w-25 mx-auto">
                             <h5>Roselyn Kanairo</h5>
-                            <span>Mpost</span>
+                            <span> Mpost</span>
                         </div>
                     </div>
                 </div>
