--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <img class="img-fluid" src="img/Felix.jpg" alt="">
+                    <img class="img-fluid" src="https://github.com/Kegode/Kegode.github.io/blob/master/img/Felix.jpg" alt="">
                 </div>
             </div>
         </div>
